1.0-devel
=====================

 * Add Topic to the list of allowed sub-objects for Topic during Migration.
   It was missing before because the class allowed_content_types property
   was being overwritten by the one from CMFTopics.
   [alecm]

 * BrowserDefaultMixin.getAvailableLayouts() now returns a list of tuples
   instead of a DisplayList. Required by interface change in Plone.
   [optilude]

 * Added cool icons for vCal/iCal export and image rotation/flipping made by
   the legendary Vidar Anderson.
   [blacktar, tiran]

 * Replaced AttributeStorage with AnnotationStorage for Document:text,
   File:file, Image:image, Event:text and NewsItem:text,image. This requires
   Archetypes 1.3.5
   [tiran]

 * Added new Current Author criterion which, when used with the Creator index,
   gets all objects authored by the currently logged in user.  Also fixed some
   permissions that were preventing normal users from viewing published topics.
   Fixes issue #1176355 (https://sourceforge.net/tracker/?func=detail&aid=1176355&group_id=55262&atid=645337).
   [alecm]

 * Changed processForm to check for id confilicts using check_ids if available,
   otherwise just parent.objectIds().  Also commit sub-transaction to make
   rename work after portal_factory.
   [alecm]

 * Added version migration system mostly copied from plone.  Works automatically
   during Plone 2.1 migration to bring plone 2.0 sites that started with ATCT >=0.2
   up to date including changing and uncatalogging ATTopic criteria and
   migrating CMF Topics.
   [alecm]

 * Fixed a small bug in Topic migration introduced during the merge.
   [alecm]

 * Made topic.addCriterion() return the newly added criterion object.  That
   it didn't before made things hard for python product developers.
   [alecm]

 * Fixed bug #3773 (http://members.plone.org/collector/3773) validation
   check for empty/non-existant files/images.
   [alecm]

 * Changed the behavior of the date criteria to make the meaning of