@@ -1,0 +1,27 @@
+<li tal:repeat="item options/children"
+    tal:define="tabindex options/tabindex;
+                value options/value;
+                fieldName options/fieldName">
+    
+    <tal:level define="level options/level|python:0">
+
+            <input tal:define="tabindex tabindex/next"
+                   tal:attributes="type string:checkbox;
+                                   name string:$fieldName:list;
+                                   id string:${fieldName}_${tabindex};
+                                   tabindex tabindex;
+                                   checked python:test(here.unicodeTestIn(item['path'], value), 'checked', None);
+                                   value item/path;"/>
+
+            <a tal:attributes="href item/absolute_url;">
+                <span tal:content="item/Title|nothing"
+                      tal:attributes="title item/Description|nothing;
+                                      class string:state-${item/review_state};"/>
+            </a>
+    <ul tal:define="children item/children|nothing"
+        tal:condition="children"
+        tal:content="structure python:here.sitemap_element_macro(children=children, level=level+1, tabindex=tabindex, value=value, fieldName=fieldName)">
+          Get subtree, if available.
+    </ul>
+    </tal:level>
+</li>
