@@ -1,0 +1,52 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      i18n:domain="plone">
+  <head><title></title></head>
+  <body>
+
+    <!-- Integer Widgets -->
+
+    <metal:view_macro define-macro="view"
+              tal:define="vocab python:field.Vocabulary(here);
+              value python:accessor();
+              display python:here.displayValue(vocab, value);"
+              tal:replace="structure display" />
+
+    <metal:define metal:define-macro="edit">
+      <metal:use metal:use-macro="field_macro | here/widgets/field/macros/edit">
+        <ul metal:fill-slot="widget_body"
+            class="portal-sitemap portletNavigationLevel0">
+            <li>
+                <input tal:define="tabindex tabindex/next;
+                                   portal_path python:'/'.join(portal_object.getPhysicalPath())"
+                       tal:attributes="type string:checkbox;
+                                       name string:$fieldName:list;
+                                       id string:${fieldName}_${tabindex};
+                                       tabindex tabindex;
+                                       checked python:test(here.unicodeTestIn(portal_path, value), 'checked', None);
+                                       value portal_path;"/>
+
+                <a tal:attributes="href portal_url;">
+                    <span tal:content="portal_object/Title|string:Home"
+                          tal:attributes="title portal_object/Description|nothing;"/>
+                </a>
+                <ul tal:define="data python:here.plone_utils.createSitemap(portal_object)"
+                    tal:content="structure python:here.sitemap_element_macro(children=data.get('children', []), level=1, tabindex=tabindex, value=value, fieldName=fieldName)">
+                    SUBTREE
+                </ul>
+            </li>
+        </ul>
+      </metal:use>
+    </metal:define>
+
+    <div metal:define-macro="search">
+      <div metal:use-macro="here/widgets/integer/macros/edit">
+      </div>
+    </div>
+
+  </body>
+
+</html>
+
